--- a/guides/getting-started/installation-setup.mdx
+++ b/guides/getting-started/installation-setup.mdx
@@ -1,302 +1,285 @@
 ---
 title: "Installation and Setup"
-description: "Learn how to install GoogleTest and GoogleMock, configure your environment, and confirm that your setup works using build systems like CMake or Bazel. Covers initial project configuration and dependency management."
+description: "A concise walkthrough for installing GoogleTest and GoogleMock, configuring your project using CMake or Bazel, and ensuring everything is ready for writing and running tests. Covers key setup steps for both standalone and merged GoogleTest/GoogleMock projects."
 ---
 
-# Installation and Setup
+# Installation and Setup Guide
 
-## Overview
-
-This guide walks you through installing GoogleTest and GoogleMock, configuring your development environment, and validating your setup using popular build systems such as **CMake** and **Bazel**. It covers initial project setup, dependency management, and best practices to get your testing framework operational securely and efficiently.
+This guide walks you through installing GoogleTest and GoogleMock, configuring your project with either CMake or Bazel, and verifying that your development environment is ready for writing and running tests. Whether you use these frameworks standalone or merged, following these steps will ensure a smooth setup.
 
 ---
 
-## 1. Preparing Your Environment
+## 1. Overview
+
+### What You Will Accomplish
+After completing this guide, you will have:
+
+- Cloned and built GoogleTest and GoogleMock using either CMake or Bazel.
+- Configured your project's build system to include GoogleTest/GoogleMock headers and libraries.
+- Verified your environment is set up correctly to write, build, and run tests.
 
 ### Prerequisites
-- A system with **C++17** support and a compatible compiler.
-- Installed **CMake** (minimum version recommended is 3.14).
-- Installed **Bazel** if using Bazel as the build system.
-- Access to the GoogleTest source code repository or its release tarballs.
 
-### Expected Outcome
-You will have GoogleTest and GoogleMock compiled, installed (optionally), and configured for use in your projects.
+- C++17 compatible compiler installed.
+- CMake (3.14 or higher) installed if using CMake.
+- Git installed for source code cloning.
+- Basic knowledge of CMake or Bazel usage.
+- On Windows, Visual Studio (or equivalent) installed if building with CMake.
 
 ### Estimated Time
-Approximately 10-20 minutes, depending on your familiarity with build tools.
+~20-30 minutes for initial setup depending on familiarity.
 
 ### Difficulty Level
-Beginner to Intermediate.
+Intermediate (familiarity with C++ build systems recommended).
 
 ---
 
-## 2. Cloning and Initial Setup
+## 2. Installation and Build Steps
 
-The first step is obtaining the GoogleTest sources, which include GoogleMock by default.
+### 2.1 Cloning the Repositories
 
-<Steps>
-<Step title="Clone the Repository">
-Run:
+GoogleTest and GoogleMock are maintained together in a single repository but also provide separate build options.
+
 ```bash
-git clone https://github.com/google/googletest.git -b v1.17.0
-cd googletest
+# Clone the GoogleTest repository at a stable tag
+$ git clone https://github.com/google/googletest.git -b v1.17.0
+db googletest
 ```
-This fetches version 1.17.0 with all subcomponents.
-</Step>
-<Step title="Create Build Directory">
-Create a separate build directory to keep your source tree clean:
-```bash
-mkdir build
-cd build
-```
-</Step>
-</Steps>
+
+### 2.2 Building with CMake
+
+You can build GoogleTest and GoogleMock as standalone projects or integrate them into your existing CMake project.
+
+#### 2.2.1 Building Standalone with CMake
+
+1. Navigate into the cloned directory:
+
+    ```bash
+    cd googletest
+    mkdir build
+    cd build
+    ```
+
+2. Generate build scripts (includes GoogleMock by default):
+
+    ```bash
+    cmake ..
+    ```
+
+    - To build only GoogleTest (excluding GoogleMock):
+
+    ```bash
+    cmake .. -DBUILD_GMOCK=OFF
+    ```
+
+3. Build the libraries:
+
+    - On Unix-like systems:
+
+      ```bash
+      make
+      ```
+
+    - On Windows with Visual Studio:
+      Open the generated `gtest.sln` and build the solution.
+
+    - On MacOS with Xcode:
+      Open the `.xcodeproj` file and build.
+
+4. (Optional) Install the libraries globally (usually requires admin privileges):
+
+    ```bash
+    sudo make install
+    ```
+
+#### 2.2.2 Incorporating GoogleTest into Your CMake Project
+
+There are two main techniques:
+
+1. Find Installed Package
+
+    Use `find_package(GTest CONFIG REQUIRED)` if GoogleTest is installed.
+
+    Then link with libraries like `GTest::gtest` and `GTest::gmock`.
+
+2. Build GoogleTest Directly as Part of Your Project
+
+    Add the GoogleTest source as a subdirectory, ensuring consistent compiler and linker settings.
+
+    Example snippet for your `CMakeLists.txt`:
+
+    ```cmake
+    include(FetchContent)
+    FetchContent_Declare(
+      googletest
+      URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
+    )
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)  # On Windows, for runtime consistency
+    FetchContent_MakeAvailable(googletest)
+
+    add_executable(my_tests tests.cpp)
+    target_link_libraries(my_tests gtest_main)
+    add_test(NAME my_tests COMMAND my_tests)
+    ```
+
+> **Tip:** Using `FetchContent` ensures GoogleTest sources are always in sync and eliminates manual updates.
 
 ---
 
-## 3. Building with CMake
+### 2.3 Building with Bazel
 
-GoogleTest offers robust CMake support for both standalone builds and integration into your projects.
+If your project uses Bazel, GoogleTest and GoogleMock are available as external dependencies.
 
-### Standalone Build
+- Update your `MODULE.bazel` or `WORKSPACE` to include GoogleTest.
+- Import the necessary targets and write test binaries.
 
-By default, GoogleMock is included; if you want only GoogleTest, disable GoogleMock explicitly.
-
-<Steps>
-<Step title="Generate Build Files">
-Run:
-```bash
-cmake .. \
-  -DCMAKE_CXX_STANDARD=17 \
-  -Dgtest_build_samples=ON \
-  -Dgtest_build_tests=ON \
-  -Dgmock_build_tests=ON
-```
-This ensures samples and tests are built with proper C++17 flags.
-</Step>
-<Step title="Build the Library and Tests">
-Execute:
-```bash
-make -j$(nproc)
-```
-This compiles GoogleTest and GoogleMock along with their tests and samples.
-</Step>
-<Step title="Run Tests to Confirm Setup">
-Run tests:
-```bash
-ctest -j$(nproc) --output-on-failure
-```
-Confirms the build is successful and all tests pass.
-</Step>
-</Steps>
-
-### Alternative: Building GoogleTest Only
-
-If you want only GoogleTest and not GoogleMock, modify the generate step:
-
-```bash
-cmake .. -DBUILD_GMOCK=OFF
-```
+Refer to the [Installing with Bazel guide](/getting-started/setup-and-installation/installing-with-bazel) for detailed steps.
 
 ---
 
-## 4. Integrating GoogleTest into Your CMake Project
+## 3. Configuring Your Project
 
-You can incorporate GoogleTest by either installing it system-wide or building it alongside your project.
+### Linking and Headers
 
-### Using Installed GoogleTest
+- Ensure your project includes GoogleTest and GoogleMock header directories.
+- Link against the appropriate libraries, choosing one of these depending on your needs:
 
-1. Install GoogleTest (typically requires system administrator privileges):
+  - `gtest` – Basic GoogleTest library.
+  - `gtest_main` – GoogleTest library including `main()` function.
+  - `gmock` – GoogleMock library without a `main()`.
+  - `gmock_main` – GoogleMock with a `main()` function.
 
-```bash
-sudo make install
-```
+### Visual Studio Users
 
-2. In your project CMakeLists.txt, import with pkg-config or find_package:
+- When integrating with Visual Studio, use `gtest_force_shared_crt` to avoid runtime conflicts between your project and GoogleTest.
+- Without this, you may encounter linker errors about mismatched runtime libraries.
+
+### C++ Standard Version
+
+GoogleTest requires C++17 or newer. In your CMake project:
 
 ```cmake
-find_package(PkgConfig REQUIRED)
-pkg_search_module(GTEST REQUIRED gtest_main)
-
-add_executable(my_tests test_main.cpp)
-target_link_libraries(my_tests PRIVATE ${GTEST_LDFLAGS})
-target_compile_options(my_tests PRIVATE ${GTEST_CFLAGS})
-
-enable_testing()
-add_test(NAME MyTests COMMAND my_tests)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 ```
 
-> For pkg-config guidance and troubleshooting, see the [Using GoogleTest from various build systems](docs/pkgconfig.md) documentation.
-
-### Building Inline with Your Project
-
-Add GoogleTest source as a subdirectory:
-
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/v1.17.0.tar.gz
-)
-FetchContent_MakeAvailable(googletest)
-
-add_executable(your_test your_test.cc)
-target_link_libraries(your_test gtest_main)
-add_test(NAME your_test COMMAND your_test)
-```
-
-This keeps compiler flags consistent and simplifies dependency management.
+This ensures your compiler uses the correct standard.
 
 ---
 
-## 5. Building with Bazel
+## 4. Verifying Your Setup
 
-GoogleTest also supports Bazel build integration, which is commonly used in large CI environments.
+Create a minimal test file to verify the build and linkage:
 
-<Steps>
-<Step title="Choose Bazel Binary">
-If running on Kokoro or a versioned environment, locate the Bazel binary, otherwise use the default:
+```c++
+#include <gtest/gtest.h>
+
+TEST(SanityTest, BasicAssertions) {
+  EXPECT_EQ(1, 1);
+}
+
+int main(int argc, char **argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+Build and run this test:
 
 ```bash
-BAZEL_BIN=bazel
+# For CMake:
+mkdir build && cd build
+cmake ..
+cmake --build .
+./YourTestExecutable
 ```
-</Step>
-<Step title="Run Bazel Tests">
-Execute the tests with example options:
 
-```bash
-${BAZEL_BIN} test ... \
-  --copt="-Wall" \
-  --copt="-Werror" \
-  --copt="-Wundef" \
-  --cxxopt="-std=c++17" \
-  --enable_bzlmod=true \
-  --keep_going \
-  --show_timestamps \
-  --test_output=errors
-```
-</Step>
-</Steps>
-
-> Bazel automatically manages dependencies and build correctness for GoogleTest and GoogleMock.
+Expected output should show that the tests ran and succeeded.
 
 ---
 
-## 6. Configuration Options
+## 5. Advanced Configuration and Tweaks
 
-### Control Compiler Flags
+### Multi-threaded Tests
 
-When using CMake, GoogleTest applies sane default flags for popular compilers like MSVC, GCC, and Clang. For example:
+GoogleTest supports thread safety if `pthread` is available. You can manually control pthread use by defining `-DGTEST_HAS_PTHREAD=1` or `0` in your build flags.
 
-- On MSVC, warnings are set to `/W4`, `/WX` enabled.
-- On GCC/Clang, warnings like `-Wall -Wshadow -Wundef` are enabled.
-- Exception handling and RTTI flags are configurable via `cxx_exception_flags` and `cxx_no_rtti_flags`.
+### Using GoogleTest as a Shared Library
 
-You may override the default flags during your build configuration by customizing options like `cxx_no_exception` or `cxx_no_rtti`.
+To build GoogleTest or GoogleMock as a shared library (DLL on Windows):
 
-### Shared vs Static Libraries
+Add `-DGTEST_CREATE_SHARED_LIBRARY=1` to compiler flags when building the libraries.
 
-By setting `BUILD_SHARED_LIBS` or `-DBUILD_SHARED_LIBS=ON` you can choose shared or static linkage for the GoogleTest libraries. When building shared libraries, the macro `GTEST_CREATE_SHARED_LIBRARY=1` is defined to support proper linkage.
+Add `-DGTEST_LINKED_AS_SHARED_LIBRARY=1` when compiling your tests.
 
-### Important Flags
+> **Note:** Using shared libraries may improve load times but is optional.
 
-- `gtest_force_shared_crt`: Ensures GoogleTest uses the shared runtime on MSVC to avoid multiple runtime copies.
+### Avoiding Macro Name Clashes
 
----
+GoogleTest defines many macros (e.g., `TEST()`, `ASSERT_EQ`). To avoid clashes:
 
-## 7. Verifying Your Installation
-
-Once built, confirm the following:
-
-- All tests pass successfully with no failures.
-- GoogleTest and GoogleMock libraries and headers are in expected locations if installed.
-- Your project can link to GoogleTest libraries without compiler or linker errors.
-
-You can test basic integration by compiling sample tests and running them as shown in the CMake integration step.
+Define `-DGTEST_DONT_DEFINE_TEST=1` (or other macro variations) in your compiler flags. Then use the `GTEST_` prefix, e.g., `GTEST_TEST()` instead of `TEST()`.
 
 ---
 
-## 8. Troubleshooting and Tips
+## 6. Troubleshooting
 
-<AccordionGroup title="Common Setup Issues">
-<Accordion title="Missing Headers or Linker Errors">
-Ensure include paths and link libraries are correctly specified. Validate that GoogleTest was installed or built in your environment, and the correct versions of dependencies (e.g., pthreads) are available.
+<AccordionGroup title="Common Issues During Installation and Setup">
+<Accordion title="Linker Errors About Runtime Library Mismatch">
+If you see linker errors mentioning runtime library mismatches (e.g., `MTd_StaticDebug` vs `MDd_DynamicDebug`):
+
+- Enable `gtest_force_shared_crt` in CMake for consistent runtime linkage.
+- Check your project and GoogleTest compile flags to ensure they match.
 </Accordion>
-<Accordion title="Compiler Compatibility">
-Make sure your compiler supports C++17. Older compilers may fail to build GoogleTest.
+<Accordion title="Build Fails Due to Missing pthread Library">
+- If on a Unix-like system, build errors related to pthread linkage indicate missing pthread flags.
+- Using CMake should handle these automatically.
+- If using your own build system, add `-lpthread` and relevant compiler flags.
+- Use `-DGTEST_HAS_PTHREAD=1` to force enable pthread support if needed.
 </Accordion>
-<Accordion title="Runtime Library Mismatches on Windows">
-Use the `gtest_force_shared_crt` option in CMake if encountering multiple CRT runtime errors.
+<Accordion title="Tests Fail Due to C++ Standard Version">
+
+- Verify your compiler supports C++17.
+- Ensure your build system sets `-std=c++17` or equivalent.
+- In CMake, use `set(CMAKE_CXX_STANDARD 17)`.
+
 </Accordion>
 </AccordionGroup>
 
-<Tip>
-If you are using pkg-config, and it can't find GoogleTest, set the `PKG_CONFIG_PATH` environment variable to the directory containing your `.pc` files. For cross-compilation, configure sysroot variables to ensure correct paths.
-</Tip>
-
 ---
 
-## 9. Next Steps
+## 7. Summary Workflow Diagram
 
-- After installation, proceed to [Writing Your First Test](/guides/getting-started/your-first-test) to start authoring tests.
-- For build system integration beyond standalone setup, consult [Integrating with Build Systems and CI](/guides/advanced-practices/integration-build-systems).
-- If you face issues, visit [Troubleshooting Common Setup Issues](/getting-started/troubleshooting/common-errors).
-
----
-
-## Appendix: Example CMake Build Commands
-
-```bash
-# Clone the repository
- git clone https://github.com/google/googletest.git -b v1.17.0
- cd googletest
-
-# Create build directory
- mkdir build && cd build
-
-# Configure with GoogleMock enabled
- cmake .. -DCMAKE_CXX_STANDARD=17 -Dgtest_build_samples=ON -Dgtest_build_tests=ON -Dgmock_build_tests=ON
-
-# Or configure to disable GoogleMock
- cmake .. -DBUILD_GMOCK=OFF
-
-# Build
- make -j$(nproc)
-
-# Run tests
- ctest -j$(nproc) --output-on-failure
+```mermaid
+flowchart TD
+  A[Clone googletest repo] --> B{Choose build system}
+  B -->|CMake| C[Build with CMake]
+  C --> C1[Build standalone]
+  C --> C2[Embed in your project]
+  B -->|Bazel| D[Setup workspace for Bazel]
+  C1 --> E[Run make/build command]
+  C2 --> F[Add FetchContent or subdir]
+  E --> G[Verify build success]
+  F --> G
+  D --> G
+  G --> H[Write and run first test]
 ```
 
 ---
 
-## Appendix: Example Bazel Test Command
+## 8. Next Steps
 
-```bash
-bazel test ... \
-  --copt="-Wall" \
-  --copt="-Werror" \
-  --copt="-Wundef" \
-  --cxxopt="-std=c++17" \
-  --enable_bzlmod=true \
-  --keep_going \
-  --show_timestamps \
-  --test_output=errors
-```
+- Proceed to [Writing and Running Your First Test](/guides/getting-started/your-first-test) for creating tests.
+- Explore [Project Configuration](/getting-started/configuration-and-first-use/project-configuration) for integration into larger projects.
+- If you use Bazel, check the [Installing with Bazel guide](/getting-started/setup-and-installation/installing-with-bazel).
 
 ---
 
 ## References
 
 - [GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [Official GoogleTest README](https://github.com/google/googletest/blob/main/README.md)
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html)
-- [Pkg-config Integration](docs/pkgconfig.md)
-- [GoogleMock Documentation](https://github.com/google/googletest/tree/main/googlemock)
+- [CMake Official Site](https://cmake.org/)
+- GoogleTest Primer: Core concepts for writing tests
+- gMock documentation for mocking with GoogleMock
 
 ---
-
-## Frequently Asked Questions
-
-For questions about installation and system compatibility, please see the FAQ section on [Installation and Setup Questions](/faq/general-usage-faq/installation-setup-questions).
-
-
