--- a/guides/getting-started/your-first-test.mdx
+++ b/guides/getting-started/your-first-test.mdx
@@ -1,229 +1,197 @@
 ---
-title: "Writing Your First Test"
-description: "Walk through creating and running a simple unit test using GoogleTest. Learn test structure, setup, compilation, and execution, with explanations for core test macros and test runners."
+title: "Writing and Running Your First Test"
+description: "Step-by-step tutorial on creating your first GoogleTest unit test and running it. Introduces the test macro, basic assertions, and how to execute tests, helping users gain immediate hands-on experience."
 ---
 
-# Writing Your First Test
+# Writing and Running Your First Test
 
-## Introduction
-
-This guide will take you step-by-step through creating and running a basic unit test with GoogleTest. By following these instructions, you will understand the structure of GoogleTest tests, learn how to set up test cases, compile and link your test programs, and execute tests using the GoogleTest framework.
-
-Whether you're new to GoogleTest or want a quick, practical introduction, this guide will get you up and running confidently with your first test.
+Welcome to your first hands-on experience with GoogleTest! This guide walks you through writing a simple unit test from scratch and running it, introducing essential concepts and commands so you can start verifying your C++ code immediately.
 
 ---
 
-## What You Will Learn
+## 1. What You Will Achieve
 
-- How to write a simple test using the `TEST` macro.
-- How to compile and link your test code with GoogleTest libraries.
-- How to run your test executable and interpret its output.
-- Understanding test suite and test naming conventions.
-- Basic use of assertions to verify expected behavior.
+- Write a basic unit test function using GoogleTest macros
+- Compile your test with and without CMake
+- Run the test executable and interpret its output
 
----
-
-## Prerequisites
-
-- A working C++17 development environment.
-- GoogleTest source or compiled libraries available.
-- Basic knowledge of compiling C++ programs.
-- Familiarity with your build system or compiler commands.
-
-If you are missing any of these, consult the [System Requirements](../getting-started/prerequisites-installation/system-requirements.md) and [Installing with CMake](../getting-started/prerequisites-installation/install-via-cmake.md) guides.
+By the end, you'll have a working test case that verifies a simple condition and understand how to extend this foundation for comprehensive testing.
 
 ---
 
-## Step 1: Writing Your First Test
+## 2. Prerequisites
 
-At the heart of GoogleTest is the `TEST` macro, which defines an individual test function. It takes two arguments:
+Before proceeding, ensure you have the following ready:
 
-1. The test suite name (a group of related tests).
-2. The test name within that suite.
+- GoogleTest installed and configured in your development environment [see Installation and Setup guide](/guides/getting-started/installation-setup)
+- A C++17-compliant compiler (e.g., GCC 7+, Clang 5+, MSVC 2017+)
+- Basic familiarity with compiling C++ code and running command-line tools
 
-Both names should be valid C++ identifiers and should not contain underscores (`_`) to avoid naming clashes and maintain compatibility.
+> If you're using CMake or Bazel, confirm you have at least a minimal project setup aligning with [Project Configuration](/getting-started/configuration-and-first-use/project-configuration).
 
-Here is a minimal example testing a simple function `Factorial`:
+---
+
+## 3. Writing Your First Test
+
+### Step 1: Create a Test Source File
+
+Create a C++ source file named `sample_test.cpp` with the following contents:
 
 ```cpp
-// factorial_test.cc
 #include <gtest/gtest.h>
 
-// Function to test
-int Factorial(int n) {
-  if (n <= 1) return 1;
-  return n * Factorial(n - 1);
-}
+// Test case name: "ExampleTest"
+// Test name: "BasicAssertions"
+TEST(ExampleTest, BasicAssertions) {
+  // Expect equality between 1 and 1.
+  EXPECT_EQ(1, 1);
 
-// Define test suite FactorialTest and test HandlesZeroInput
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
+  // Another assertion to demonstrate failure reporting.
+  EXPECT_NE(1, 2);
 
-// Define more tests in the same suite
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(2), 2);
-  EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(8), 40320);
+  // An assertion that will fail (for demonstration only).
+  // Uncomment to test failure report:
+  // EXPECT_EQ(2, 3);
 }
 ```
 
-**Explanation:**
+**What’s happening here?**
 
-- `TEST(FactorialTest, HandlesZeroInput)` declares a test named `HandlesZeroInput` in the `FactorialTest` suite.
-- Inside the test, `EXPECT_EQ` asserts that `Factorial(0)` equals `1`.
-- Multiple tests can belong to the same test suite, logically grouping related functionality.
+- `TEST(TestCaseName, TestName)` defines a single test.
+- `EXPECT_EQ` and `EXPECT_NE` are assertion macros that verify two values are equal or not equal.
+- When assertions fail, GoogleTest reports them but continues running the test.
 
-> **Tip:** Use descriptive test suite and test names that reflect what behavior is being checked.
+### Step 2: Compile the Test Manually
 
----
-
-## Step 2: Compiling and Linking Your Test
-
-To compile your test, you need to include the GoogleTest header `<gtest/gtest.h>` and link against the compiled GoogleTest libraries (usually `libgtest.a` and `libgtest_main.a` or their shared lib equivalents).
-
-If you installed GoogleTest as per the [Installing with CMake](../getting-started/prerequisites-installation/install-via-cmake.md) guide, you can compile your test with a command like this:
+If you prefer a direct compile command (without CMake), run something like:
 
 ```bash
-# Example using g++
-g++ -std=c++17 -isystem /path/to/googletest/include \
-    factorial_test.cc /path/to/libgtest.a /path/to/libgtest_main.a \
-    -pthread -o factorial_test
+# Replace <path_to_gtest_include> and <path_to_gtest_lib> accordingly
+clang++ -std=c++17 -I<path_to_gtest_include> sample_test.cpp -L<path_to_gtest_lib> -lgtest_main -lgtest -pthread -o sample_test
 ```
 
-**Notes:**
+On Windows with MSVC, the command will be adjusted accordingly. Confirm GoogleTest libraries and includes are correctly specified.
 
-- `-isystem` points to GoogleTest's include directory.
-- Link with the static GoogleTest libraries.
-- The `-pthread` flag enables thread support, necessary for GoogleTest.
+### Step 3: Run the Test Executable
 
-If you use CMake, you can simply add GoogleTest as a dependency and link your test executable against `gtest_main` and `gtest` libraries.
-
----
-
-## Step 3: Running Your Test Executable
-
-Once compiled, run your test binary from the command line:
+Run your test binary:
 
 ```bash
-./factorial_test
+./sample_test
 ```
 
-You will see output similar to this:
+Expected output (summary excerpt):
 
-```
-[==========] Running 2 tests from 1 test suite.
+```text
+[==========] Running 1 test from 1 test suite.
 [----------] Global test environment set-up.
-[----------] 2 tests from FactorialTest
-[ RUN      ] FactorialTest.HandlesZeroInput
-[       OK ] FactorialTest.HandlesZeroInput (0 ms)
-[ RUN      ] FactorialTest.HandlesPositiveInput
-[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
-[----------] 2 tests from FactorialTest (0 ms total)
-
+[----------] 1 test from ExampleTest
+[ RUN      ] ExampleTest.BasicAssertions
+[       OK ] ExampleTest.BasicAssertions (0 ms)
+[----------] 1 test from ExampleTest (0 ms total)
 [----------] Global test environment tear-down
-[==========] 2 tests from 1 test suite ran. (0 ms total)
-[  PASSED  ] 2 tests.
+[==========] 1 test from 1 test suite ran. (0 ms total)
+[  PASSED  ] 1 test.
 ```
 
-**What this means:**
-
-- The tests under your test suite `FactorialTest` were executed.
-- Each `RUN` is a test start, followed by result messages.
-- `OK` means the test passed without failed assertions.
-- The summary shows tests run and how many passed/failed.
-
-If any test fails, the output will include the file, line number, failure message, and a summary.
+If you uncomment the failing assertion and rerun, GoogleTest will provide a detailed failure message.
 
 ---
 
-## Understanding Tests and Assertions
+## 4. Using CMake to Build Your Test
 
-### Assertions
+You'll often want to integrate GoogleTest into your build system. Here's a minimal example for CMake.
 
-Assertions are the heart of your tests. GoogleTest provides many assertion macros. The common pattern is:
+### Step 1: Create `CMakeLists.txt`
 
-- `EXPECT_*` macros: Non-fatal failures, test continues after failure.
-- `ASSERT_*` macros: Fatal failures, aborts current function immediately.
+```cmake
+cmake_minimum_required(VERSION 3.10)
+project(ExampleTestProject CXX)
 
-A basic assertion example:
+set(CMAKE_CXX_STANDARD 17)
 
-```cpp
-EXPECT_EQ(actual, expected) << "Failure message if values differ";
+# Find GoogleTest
+find_package(GTest REQUIRED)
+
+add_executable(sample_test sample_test.cpp)
+target_link_libraries(sample_test GTest::gtest_main GTest::gtest pthread)
+
+include(GoogleTest)
+gtest_discover_tests(sample_test)
 ```
 
-Use `EXPECT_*` when you want to continue a test after failure; use `ASSERT_*` when continuing does not make sense.
+### Step 2: Build and Run
 
-### Test Suites
-
-Tests are grouped into *test suites* which share a name. This helps organize tests aligned to functionality, classes, or modules.
-
-### Naming Conventions
-
-- Test suite and test names should be valid C++ identifiers.
-- Avoid underscores in names to prevent macro and naming clashes.
-
----
-
-## Tips for Success
-
-- Name tests meaningfully to describe intent.
-- Keep tests independent: one test should test one concept or scenario.
-- Use `EXPECT_*` to allow multiple assertions per test while still reporting all failures.
-- Utilize test output to quickly identify failures and their causes.
-- Write additional tests as your code evolves.
-
----
-
-## Troubleshooting
-
-- If tests don't run, ensure GoogleTest is linked correctly.
-- If you see linker errors, verify that `libgtest_main` or equivalent is provided.
-- Compiler errors about missing `main()`? Check if you linked with GoogleTest's main or provided your own.
-- For Windows builds, confirm runtime linkage settings (`gtest_force_shared_crt` in CMake).
-
-For detailed troubleshooting, see [Troubleshooting Common Setup Issues](../getting-started/troubleshooting/common-errors.md).
-
----
-
-## What Next?
-
-- Learn how to use [Test Fixtures](../getting-started/initial-configuration/first-test-case.md#test-fixtures-using-the-same-data-configuration-for-multiple-tests) to share setup between tests.
-- Explore [Assertions Reference](../reference/assertions.md) for all available assertions.
-- Try [Value-Parameterized Tests](../guides/core-workflows/value-and-type-param-tests.md) for testing with multiple inputs.
-- Understand how to write [Typed Tests](../guides/core-workflows/value-and-type-param-tests.md#typed-tests) for multiple types.
-- Integrate GoogleTest into your build with [Configuring GoogleTest in Your Project](../getting-started/initial-configuration/add-to-project.md).
-
----
-
-## Example Complete Test File
-
-```cpp
-#include <gtest/gtest.h>
-
-int Factorial(int n) {
-  if (n <= 1) return 1;
-  return n * Factorial(n - 1);
-}
-
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
-
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(2), 2);
-  EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(8), 40320);
-}
-
-int main(int argc, char **argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
+```bash
+mkdir build && cd build
+cmake ..
+cmake --build . --config Release
+ctest -V
 ```
 
-This example includes a simple `main()` function that initializes GoogleTest and runs all tests.
+The `ctest -V` command runs tests and outputs verbose results equivalent to running the binary directly.
+
+---
+
+## 5. Understanding Test Structure
+
+- **Test case:** This is `ExampleTest` - groups related tests logically.
+- **Test:** `BasicAssertions` - a function that holds one or more assertions.
+- **Assertions:** Evaluate conditions; when failing, report errors but do not stop the test unless fatal assertion is used.
+
+This pattern scales naturally as you add more tests and complex validations.
+
+---
+
+## 6. Practical Tips & Best Practices
+
+- Start with simple tests to verify basic functionality.
+- Use descriptive test case and test names for clarity.
+- Remember that GoogleTest asserts are non-fatal by default (`EXPECT_*`), so tests continue after a failure.
+- Use `ASSERT_*` macros when the failure should halt the current test immediately.
+- Avoid side-effect statements inside assertions unless necessary.
+- Use the `--gtest_filter` flag to run specific tests by test case or test name.
+- Keep your test dependencies isolated to avoid flaky behaviors.
+
+---
+
+## 7. Troubleshooting Common Issues
+
+<AccordionGroup title="Common Issues">  
+<Accordion title="Compilation Errors Related to GoogleTest Headers or Libraries">  
+Ensure you have added the correct include paths and linked the required libraries (`gtest`, `gtest_main`, and on Linux/macOS, `pthread`).  
+For CMake usage, `find_package(GTest REQUIRED)` mitigates this step.  
+</Accordion>  
+<Accordion title="Test Binary Does Not Run or Finds No Tests">  
+Verify the test binary is linked with `gtest_main` or you provide your own `main` function.  
+Ensure you call `::testing::InitGoogleTest(&argc, argv);` in `main` if you write one.  
+</Accordion>  
+<Accordion title="Tests Do Not Fail When Expected">  
+Check that expectation macros (e.g., `EXPECT_EQ`) are correctly used.  
+Verify the code under test actually calls the test assertions.  
+Run the tests with `--gtest_verbose=info` for detailed output.  
+</Accordion>  
+<Accordion title="Unexpected Behavior or Crashes">  
+Make sure all virtual destructors are present in interfaces, especially when mocking.  
+Avoid mocking non-virtual methods unless employing specific strategies detailed elsewhere.  
+</Accordion>  
+</AccordionGroup>
+
+---
+
+## 8. Next Steps
+
+- Explore writing more complex test cases with fixtures and parameterized tests in the [Writing and Running Your First Test guide](/getting-started/configuration-and-first-use/writing-first-test).
+- Learn about GoogleMock basics to mock dependencies ([Basic Mocking with GoogleMock](/getting-started/configuration-and-first-use/using-googlemock-basics)).
+- Dive into assertions and test patterns for robust validations ([Assertions and Test Patterns](/guides/core-test-workflows/assertions-best-practices)).
+
+---
+
+## 9. Additional Resources
+
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) - Detailed introduction
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) - Easy mock introduction
+- [GoogleTest GitHub Repository](https://github.com/google/googletest) - Source and examples
+- [CMake Installation and Setup Guide](/guides/getting-started/installation-setup)
 
 ---
