--- a/api-reference/core-api/assertions.mdx
+++ b/api-reference/core-api/assertions.mdx
@@ -1,519 +1,280 @@
 ---
 title: "Assertions and Expectations"
-description: "Exhaustive catalog of all core and extended assertion macros, including equality, comparison, exception, and fatal/non-fatal variants. Provides guidance on choosing assertions, controlling failure behavior, and crafting expressive test diagnostics."
+description: "Provides a reference to all core assertion macros and methods, such as equality, exception, and floating point checks. Explains distinction between fatal and non-fatal assertions, and demonstrates usage with concise code examples."
 ---
 
 # Assertions and Expectations
 
-This page provides an exhaustive catalog and guide to the assertion macros available in GoogleTest, designed to help you validate your code's behavior with clarity and precision. You will find detailed explanations of each assertion type, their behavior (fatal vs nonfatal), usage patterns, and practical examples for real-world scenarios.
+This reference documentation provides a comprehensive guide to the core assertion macros and methods available in GoogleTest, covering various types such as equality checks, exception assertions, and floating point comparisons. It also clarifies the distinction between fatal and non-fatal assertions, empowering you to write robust tests that align exactly with your verification goals. With concise examples and clear explanations, you'll master how to leverage assertions to express your test intent precisely.
+
+---
 
 ## Understanding Assertions in GoogleTest
 
-At the heart of your testing strategy are assertions — statements that test whether a condition holds true. GoogleTest provides two variants for most assertions:
+Assertions are fundamental constructs that verify conditions within your test code. GoogleTest offers a rich array of assertion macros that you can use to verify different aspects of your code behavior. These macros come in pairs:
 
-- `EXPECT_*`: Generates a nonfatal failure and allows the current test function to continue running.
-- `ASSERT_*`: Generates a fatal failure and immediately aborts the current test function.
+- `EXPECT_` macros generate **nonfatal failures**. When they fail, the current test function continues executing.
+- `ASSERT_` macros generate **fatal failures**. When they fail, the current test function returns immediately.
 
-Use `EXPECT_*` when you want to check multiple conditions and see all failures at once. Use `ASSERT_*` when continuing after a failure does not make sense or may cause cascading errors.
+This design lets you control test flow depending on the severity of the check.
 
-All assertion macros support streaming user-defined failure messages using the `<<` operator to make your diagnostics richer and clearer.
+All assertion macros support streaming additional failure messages using the `<<` operator to provide clearer diagnostics when your test fails.
 
 ```cpp
-EXPECT_TRUE(condition) << "Custom failure message if condition is false.";
+EXPECT_TRUE(my_condition) << "Condition was expected to be true.";
 ```
 
 ---
 
-## Explicit Success and Failure Assertions
+## Types of Assertions
 
-Sometimes, you need to explicitly indicate success or failure based on control flow rather than an evaluated Boolean expression.
+### 1. Success, Failure, and Explicit Non-Test Checks
 
-### SUCCEED
+- **SUCCEED()**: Generates explicit success; useful for documenting that a code path has been reached. It does *not* cause the overall test to pass or fail by itself.
 
-```cpp
-SUCCEED();
-```
+- **FAIL()**: Generates a fatal failure, returning from the current function. Only usable in functions returning `void`.
 
-- Generates a success record.
-- Does **not** make the entire test succeed if there are previous failures.
-- Mainly used for documentation or future-proofing test output.
+- **ADD_FAILURE()**: Generates a nonfatal failure, allowing the current function to continue.
+
+- **ADD_FAILURE_AT(file, line)**: Generates a nonfatal failure reported at a specific file and line number.
 
 
-### FAIL
+### 2. Boolean Conditions
 
-```cpp
-FAIL();
-```
-
-- Generates a fatal failure, aborting the current function.
-- Only callable in `void` functions.
-
-
-### ADD_FAILURE
-
-```cpp
-ADD_FAILURE();
-```
-
-- Generates a nonfatal failure but allows the test to continue.
-
-
-### ADD_FAILURE_AT
-
-```cpp
-ADD_FAILURE_AT("file_path", line_number);
-```
-
-- Generates a nonfatal failure at a specific file and line number.
-
-<Info>
-Use these explicit macros to handle cases where failures or successes are decided outside typical Boolean checks, such as switch-case default paths.
-</Info>
-
----
-
-## Generalized Assertions with Matchers
-
-GoogleTest lets you combine assertions with [gMock matchers](matchers.md) to write expressive checks.
-
-### EXPECT_THAT and ASSERT_THAT
-
-```cpp
-EXPECT_THAT(value, matcher);
-ASSERT_THAT(value, matcher);
-```
-
-- Verify that `value` satisfies the provided matcher.
-- Produce clear failure messages that describe which condition was not met.
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`: Verifies that the condition is `true`.
+- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`: Verifies that the condition is `false`.
 
 Example:
-
 ```cpp
-#include <gmock/gmock.h>
-using ::testing::StartsWith;
-using ::testing::MatchesRegex;
-using ::testing::AllOf;
-using ::testing::Gt;
-using ::testing::Lt;
-
-EXPECT_THAT(str, StartsWith("Hello"));
-EXPECT_THAT(str2, MatchesRegex("Line \\d+"));
-ASSERT_THAT(num, AllOf(Gt(5), Lt(10)));
+EXPECT_TRUE(IsValid(input));
+ASSERT_FALSE(HasErrors(report));
 ```
 
-<Note>
-Matchers enhance readability and produce detailed expectations, making your tests easier to maintain.
-</Note>
+### 3. Binary Comparisons
 
----
+Verify that two values relate in expected ways using comparison assertions:
 
-## Boolean Assertions
+| Macro          | Meaning                      |
+|----------------|------------------------------|
+| `EXPECT_EQ`/`ASSERT_EQ` | Checks that two values are equal (`==`).
+| `EXPECT_NE`/`ASSERT_NE` | Checks that two values are not equal (`!=`).
+| `EXPECT_LT`/`ASSERT_LT` | Checks if first value is less than second (`<`).
+| `EXPECT_LE`/`ASSERT_LE` | Checks if first value is less than or equal (`<=`).
+| `EXPECT_GT`/`ASSERT_GT` | Checks if first value is greater than second (`>`).
+| `EXPECT_GE`/`ASSERT_GE` | Checks if first value is greater than or equal (`>=`).
 
-Verify simple true/false conditions.
-
-### EXPECT_TRUE / ASSERT_TRUE
-
-```cpp
-EXPECT_TRUE(condition);
-ASSERT_TRUE(condition);
-```
-
-- Check that `condition` evaluates to true.
-
-### EXPECT_FALSE / ASSERT_FALSE
-
-```cpp
-EXPECT_FALSE(condition);
-ASSERT_FALSE(condition);
-```
-
-- Check that `condition` evaluates to false.
-
-<Info>
-Prefer using these over complex Boolean expressions for clarity and better diagnostics.
-</Info>
-
----
-
-## Binary Comparisons
-
-Compare two values with various relational operators. Arguments must be comparable.
-
-> Note: These macros evaluate their arguments exactly once, allowing safe usage with expressions with side effects.
-
-### Equality
-
-#### EXPECT_EQ / ASSERT_EQ
-
-```cpp
-EXPECT_EQ(val1, val2);
-ASSERT_EQ(val1, val2);
-```
-
-- Verifies `val1 == val2`.
-- For pointers, compares addresses; for C strings use `EXPECT_STREQ`.
-
-#### EXPECT_NE / ASSERT_NE
-
-```cpp
-EXPECT_NE(val1, val2);
-ASSERT_NE(val1, val2);
-```
-
-- Verifies `val1 != val2`.
-
-### Inequality
-
-- `<`: `EXPECT_LT` / `ASSERT_LT`
-- `<=`: `EXPECT_LE` / `ASSERT_LE`
-- `>`: `EXPECT_GT` / `ASSERT_GT`
-- `>=`: `EXPECT_GE` / `ASSERT_GE`
+**Important:** When comparing pointers, these assertions check pointer equality, *not* pointed-to value equality (for C-strings, use string comparison macros).
 
 Example:
-
 ```cpp
-EXPECT_LT(value, threshold) << "Value exceeds threshold";
+EXPECT_EQ(expected_value, actual_value);
+ASSERT_LT(min_limit, computed);
 ```
 
----
+### 4. String Comparisons
 
-## String Comparisons
+For comparing **C strings** (`const char*` or `wchar_t*`), GoogleTest provides:
 
-For C strings (`const char*` or `wchar_t*`), which compare pointers by default, use special macros to compare contents.
-
-### EXPECT_STREQ / ASSERT_STREQ
-
-```cpp
-EXPECT_STREQ(str1, str2);
-ASSERT_STREQ(str1, str2);
-```
-
-- Checks if two C strings have equal contents.
-
-### EXPECT_STRNE / ASSERT_STRNE
-
-```cpp
-EXPECT_STRNE(str1, str2);
-ASSERT_STRNE(str1, str2);
-```
-
-- Checks if two C strings have different contents.
-
-### EXPECT_STRCASEEQ / ASSERT_STRCASEEQ
-
-```cpp
-EXPECT_STRCASEEQ(str1, str2);
-ASSERT_STRCASEEQ(str1, str2);
-```
-
-- Case-insensitive equality check.
-
-### EXPECT_STRCASENE / ASSERT_STRCASENE
-
-```cpp
-EXPECT_STRCASENE(str1, str2);
-ASSERT_STRCASENE(str1, str2);
-```
-
-- Case-insensitive inequality check.
-
-<Warning>
-When comparing wide strings, `wchar_t*` is converted to UTF-8 UTF-8 encoding when printing failure messages.
-</Warning>
-
----
-
-## Floating-Point Comparisons
-
-Due to precision issues with floating-point numbers, use dedicated macros.
-
-### EXPECT_FLOAT_EQ / ASSERT_FLOAT_EQ
-
-```cpp
-EXPECT_FLOAT_EQ(val1, val2);
-ASSERT_FLOAT_EQ(val1, val2);
-```
-
-- Checks approximate equality of `float` values within 4 Units in the Last Place (ULPs).
-
-### EXPECT_DOUBLE_EQ / ASSERT_DOUBLE_EQ
-
-```cpp
-EXPECT_DOUBLE_EQ(val1, val2);
-ASSERT_DOUBLE_EQ(val1, val2);
-```
-
-- Checks approximate equality of `double` values within 4 ULPs.
-
-### EXPECT_NEAR / ASSERT_NEAR
-
-```cpp
-EXPECT_NEAR(val1, val2, abs_error);
-ASSERT_NEAR(val1, val2, abs_error);
-```
-
-- Checks that difference between `val1` and `val2` is within `abs_error`.
-- Correctly handles infinite values.
-
----
-
-## Exception Assertions
-
-Verify that code throws or does not throw exceptions. Requires exceptions enabled in build.
-
-### EXPECT_THROW / ASSERT_THROW
-
-```cpp
-EXPECT_THROW(statement, exception_type);
-ASSERT_THROW(statement, exception_type);
-```
-
-- Verifies `statement` throws the specified exception.
-
-### EXPECT_ANY_THROW / ASSERT_ANY_THROW
-
-```cpp
-EXPECT_ANY_THROW(statement);
-ASSERT_ANY_THROW(statement);
-```
-
-- Verifies `statement` throws an exception of any type.
-
-### EXPECT_NO_THROW / ASSERT_NO_THROW
-
-```cpp
-EXPECT_NO_THROW(statement);
-ASSERT_NO_THROW(statement);
-```
-
-- Verifies `statement` does not throw any exception.
-
-<Warning>
-You can test compound statements by wrapping them in braces `{ ... }`.
-</Warning>
-
----
-
-## Predicate Assertions
-
-Use predicate assertions to verify complex logic with better failure messages than raw `EXPECT_TRUE`.
-
-### EXPECT_PRED* / ASSERT_PRED*
-
-```cpp
-EXPECT_PRED2(pred, val1, val2);
-ASSERT_PRED3(pred, val1, val2, val3);
-```
-
-- `pred` is a function or functor returning `bool`.
-- Each macro supports from 1 to 5 parameters.
-- Failure messages show the values of each argument.
+| Macro                   | Purpose                                     |
+|-------------------------|---------------------------------------------|
+| `EXPECT_STREQ`/`ASSERT_STREQ` | Checks two C strings have the same contents.
+| `EXPECT_STRNE`/`ASSERT_STRNE` | Checks two C strings have different contents.
+| `EXPECT_STRCASEEQ`/`ASSERT_STRCASEEQ` | Checks two C strings match ignoring case.
+| `EXPECT_STRCASENE`/`ASSERT_STRCASENE` | Checks two C strings differ ignoring case.
 
 Example:
-
 ```cpp
-bool IsMutuallyPrime(int m, int n) { ... }
-EXPECT_PRED2(IsMutuallyPrime, 3, 4);  // Succeeds
-EXPECT_PRED2(IsMutuallyPrime, 4, 10); // Fails and shows arguments
+EXPECT_STREQ("hello", output.c_str());
+ASSERT_STRNE("error", message);
 ```
 
-### EXPECT_PRED_FORMAT* / ASSERT_PRED_FORMAT*
+### 5. Floating-Point Comparisons
 
-```cpp
-EXPECT_PRED_FORMAT2(pred_formatter, val1, val2);
-```
+Comparing floating-point numbers requires careful handling due to rounding and representation errors. GoogleTest provides specialized assertions:
 
-- Allows full custom formatting of the failure message.
-- `pred_formatter` is a callable returning `testing::AssertionResult`.
-- Use when you want detailed or custom assertion diagnostics.
+| Macro                   | Description                               |
+|-------------------------|-------------------------------------------|
+| `EXPECT_FLOAT_EQ` / `ASSERT_FLOAT_EQ` | Checks two `float` values are approximately equal within 4 ULPs.
+| `EXPECT_DOUBLE_EQ` / `ASSERT_DOUBLE_EQ` | Checks two `double` values are approximately equal within 4 ULPs.
+| `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)` | Checks absolute difference between values does not exceed `abs_error`.
 
 Example:
+```cpp
+EXPECT_FLOAT_EQ(calculated, expected);
+ASSERT_NEAR(measured, target, 0.001);
+```
+
+### 6. Exception Assertions
+
+These verify whether specific exceptions are thrown or not during execution. They depend on exceptions enabled in your build.
+
+- `EXPECT_THROW(statement, ExceptionType)` / `ASSERT_THROW`: Verifies that `statement` throws an exception of `ExceptionType`.
+- `EXPECT_ANY_THROW(statement)` / `ASSERT_ANY_THROW`: Verifies that `statement` throws any exception.
+- `EXPECT_NO_THROW(statement)` / `ASSERT_NO_THROW`: Verifies that `statement` does not throw any exception.
+
+Example:
+```cpp
+EXPECT_THROW(MyFunction(), std::runtime_error);
+EXPECT_NO_THROW(CleanUp());
+```
+
+You can test compound statements using braces:
+```cpp
+EXPECT_NO_THROW({ Initialize(); Process(); });
+```
+
+### 7. Predicate Assertions
+
+Enables verifying custom predicates with better diagnostic output than raw boolean checks.
+
+- `EXPECT_PRED1`, `EXPECT_PRED2`, ..., `EXPECT_PRED5`: Assert a predicate-like function returning `bool` returns true for given parameters.
+- Similarly, `EXPECT_PRED_FORMAT*` allows predicates that produce detailed failure messages.
+
+Example:
+```cpp
+bool IsPrime(int n) { ... }
+EXPECT_PRED1(IsPrime, 7);
+```
+
+### 8. Windows HRESULT Assertions
+
+Specifically designed for `HRESULT` values on Windows:
+
+- `EXPECT_HRESULT_SUCCEEDED(expr)` / `ASSERT_HRESULT_SUCCEEDED`: Checks `expr` is a success `HRESULT`.
+- `EXPECT_HRESULT_FAILED(expr)` / `ASSERT_HRESULT_FAILED`: Checks `expr` is a failure `HRESULT`.
+
+### 9. Death Assertions
+
+Verify that a code statement causes program termination with expected error output or exit code. Useful for testing fatal conditions.
+
+- `EXPECT_DEATH(statement, matcher)` / `ASSERT_DEATH`: Verifies `statement` causes abnormal termination and output matching `matcher`.
+- Variants like `EXPECT_DEATH_IF_SUPPORTED`, `EXPECT_DEBUG_DEATH`, and `EXPECT_EXIT` provide more control based on platform and conditions.
+
+Example:
+```cpp
+EXPECT_DEATH(FailFunction(), "Fatal error message");
+```
+
+
+---
+
+## Fatal vs Non-fatal Assertion Use Cases
+
+Use `ASSERT_` macros when a failure should abort the current test immediately because subsequent code depends on a condition being true.
+Use `EXPECT_` macros when you want the test to continue after failure to accumulate more assertion results.
 
 ```cpp
-testing::AssertionResult AssertMutuallyPrime(const char* m_expr,
-                                             const char* n_expr,
-                                             int m, int n) {
-  if (MutuallyPrime(m, n)) return testing::AssertionSuccess();
-  return testing::AssertionFailure() << m_expr << " and " << n_expr
-         << " are not mutually prime.";
+TEST(MyTest, FatalExample) {
+  ASSERT_NE(ptr, nullptr);  // Stops if ptr is null.
+  ptr->DoSomething();     // Safe as ptr is guaranteed non-null.
 }
 
-EXPECT_PRED_FORMAT2(AssertMutuallyPrime, 4, 10);  // Shows detailed failure message
-```
-
----
-
-## Windows HRESULT Assertions
-
-Check success or failure status returned by Windows COM methods.
-
-### EXPECT_HRESULT_SUCCEEDED / ASSERT_HRESULT_SUCCEEDED
-
-```cpp
-EXPECT_HRESULT_SUCCEEDED(expression);
-ASSERT_HRESULT_SUCCEEDED(expression);
-```
-
-- Verifies that the HRESULT indicates success.
-
-### EXPECT_HRESULT_FAILED / ASSERT_HRESULT_FAILED
-
-```cpp
-EXPECT_HRESULT_FAILED(expression);
-ASSERT_HRESULT_FAILED(expression);
-```
-
-- Verifies that the HRESULT indicates failure.
-
-<Info>
-Failure messages show both the HRESULT code and a human-readable error string.
-</Info>
-
----
-
-## Death Assertions
-
-Validate that your code causes the process to terminate under certain conditions.
-
-### EXPECT_DEATH / ASSERT_DEATH
-
-```cpp
-EXPECT_DEATH(statement, matcher);
-ASSERT_DEATH(statement, matcher);
-```
-
-- Checks that `statement` terminates the process with a nonzero exit status.
-- `matcher` is a regex or a gMock string matcher that matches the `stderr` output.
-
-Example:
-
-```cpp
-ASSERT_DEATH({ int n = 5; Foo(&n); }, "Error on line .* of Foo()");
-```
-
-### EXPECT_DEATH_IF_SUPPORTED / ASSERT_DEATH_IF_SUPPORTED
-
-- Like `EXPECT_DEATH` / `ASSERT_DEATH` but passes silently if death tests are unsupported on your platform.
-
-### EXPECT_DEBUG_DEATH / ASSERT_DEBUG_DEATH
-
-- Performs death test only in debug mode; in release mode, just executes `statement`.
-
-### EXPECT_EXIT / ASSERT_EXIT
-
-```cpp
-EXPECT_EXIT(statement, predicate, matcher);
-ASSERT_EXIT(statement, predicate, matcher);
-```
-
-- Verifies `statement` terminates with exit status satisfying `predicate`.
-- Checks `stderr` output matches `matcher`.
-- `predicate` can be:
-  - `::testing::ExitedWithCode(int exit_code)`
-  - `::testing::KilledBySignal(int signal_number)` (POSIX only)
-
----
-
-## Practical Tips & Best Practices
-
-- Use `EXPECT_*` assertions when you want to proceed after failure to discover multiple issues in one test.
-- Use `ASSERT_*` assertions to prevent executing code that depends on previous successful assertions.
-- Prefer streaming custom failure messages for clarity and debugging ease.
-- For floating-point comparisons, favor `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, or `EXPECT_NEAR` over naïve equality.
-- Use `EXPECT_THAT` with matchers for expressive, readable assertions.
-- When testing exception throwing behavior, use `EXPECT_THROW`, `EXPECT_NO_THROW`, and related macros only if exceptions are enabled in your build.
-- For validating death behavior, ensure your statements are safe to execute in isolated processes and be cautious about side effects.
-- Use predicate assertions (`EXPECT_PRED*`) to capture complex conditions while receiving detailed diagnostics automatically.
-
----
-
-## Troubleshooting Common Issues
-
-<Warning>
-- Using `ASSERT_*` macros inside non-void functions or constructors results in confusing compile errors; refactor or use `EXPECT_*` instead.
-- Be aware that failed `ASSERT_*` macros abort only the current function, not the entire test. Use `ASSERT_NO_FATAL_FAILURE()` or exceptions to propagate failures.
-- Fragile tests relying on pointer equality should use string comparison macros if comparing strings.
-- Death tests should be named carefully (test suite should end with "DeathTest") to ensure correct execution order and behavior.
-</Warning>
-
----
-
-## Complete List of Assertion Macros
-
-### Success and Failure
-- `SUCCEED()`
-- `FAIL()`
-- `ADD_FAILURE()`
-- `ADD_FAILURE_AT(file, line)`
-
-### Boolean
-- `EXPECT_TRUE(condition) / ASSERT_TRUE(condition)`
-- `EXPECT_FALSE(condition) / ASSERT_FALSE(condition)`
-
-### Equality and Inequality
-- `EXPECT_EQ(val1, val2) / ASSERT_EQ(val1, val2)`
-- `EXPECT_NE(val1, val2) / ASSERT_NE(val1, val2)`
-
-### Relational
-- `EXPECT_LT(val1, val2) / ASSERT_LT(val1, val2)`
-- `EXPECT_LE(val1, val2) / ASSERT_LE(val1, val2)`
-- `EXPECT_GT(val1, val2) / ASSERT_GT(val1, val2)`
-- `EXPECT_GE(val1, val2) / ASSERT_GE(val1, val2)`
-
-### C String Comparisons
-- `EXPECT_STREQ(str1, str2) / ASSERT_STREQ(str1, str2)`
-- `EXPECT_STRNE(str1, str2) / ASSERT_STRNE(str1, str2)`
-- `EXPECT_STRCASEEQ(str1, str2) / ASSERT_STRCASEEQ(str1, str2)`
-- `EXPECT_STRCASENE(str1, str2) / ASSERT_STRCASENE(str1, str2)`
-
-### Floating-Point
-- `EXPECT_FLOAT_EQ(val1, val2) / ASSERT_FLOAT_EQ(val1, val2)`
-- `EXPECT_DOUBLE_EQ(val1, val2) / ASSERT_DOUBLE_EQ(val1, val2)`
-- `EXPECT_NEAR(val1, val2, abs_error) / ASSERT_NEAR(val1, val2, abs_error)`
-
-### Exceptions
-- `EXPECT_THROW(statement, exception_type) / ASSERT_THROW(statement, exception_type)`
-- `EXPECT_ANY_THROW(statement) / ASSERT_ANY_THROW(statement)`
-- `EXPECT_NO_THROW(statement) / ASSERT_NO_THROW(statement)`
-
-### Predicate Assertions
-- `EXPECT_PRED*` / `ASSERT_PRED*` (1-5 arguments)
-- `EXPECT_PRED_FORMAT*` / `ASSERT_PRED_FORMAT*` (1-5 arguments, custom messages)
-
-### Windows HRESULT
-- `EXPECT_HRESULT_SUCCEEDED(expr) / ASSERT_HRESULT_SUCCEEDED(expr)`
-- `EXPECT_HRESULT_FAILED(expr) / ASSERT_HRESULT_FAILED(expr)`
-
-### Death Tests
-- `EXPECT_DEATH(statement, matcher) / ASSERT_DEATH(statement, matcher)`
-- `EXPECT_DEATH_IF_SUPPORTED / ASSERT_DEATH_IF_SUPPORTED`
-- `EXPECT_DEBUG_DEATH / ASSERT_DEBUG_DEATH`
-- `EXPECT_EXIT(statement, predicate, matcher) / ASSERT_EXIT(statement, predicate, matcher)`
-
----
-
-## Example: Combining Assertions
-
-```cpp
-TEST(FactorialTest, HandlesPositiveInput) {
-  int val = Factorial(3);
-  ASSERT_GT(val, 0) << "Factorial should be positive";
-  EXPECT_EQ(val, 6) << "3! should be 6";
-  EXPECT_NE(val, 7);
+TEST(MyTest, NonFatalExample) {
+  EXPECT_EQ(val, expected);
+  EXPECT_EQ(other_val, other_expected);
+  // Both checked even if the first fails.
 }
 ```
 
-This test uses a fatal assertion to guarantee it proceeds only if the factorial is positive, followed by several nonfatal assertions to check equality and inequality.
+---
+
+## Using Matchers for Flexible Assertions
+
+GoogleTest supports rich matchers used in `EXPECT_THAT` and `ASSERT_THAT` macros, allowing highly readable expressive assertions beyond strict equality.
+
+Example:
+
+```cpp
+EXPECT_THAT(value, StartsWith("Hello"));
+EXPECT_THAT(numbers, ElementsAre(1, 2, 3));
+EXPECT_THAT(str, MatchesRegex("\d{3}-\d{4}"));
+```
+
+Match expressive conditions, combine them logically, and provide granular diagnostics.
+
+More details on matchers are in the [Matchers Reference](../matchers-api/builtin-matchers).
+
+---
+
+## Best Practices and Recommendations
+
+- Use fatal assertions (`ASSERT_`) to guard critical conditions affecting subsequent code.
+- Use nonfatal assertions (`EXPECT_`) when independent checks make sense.
+- Use descriptive failure messages with streaming to clarify intent and aid debugging.
+- Prefer matchers and `EXPECT_THAT` for readable, flexible assertions.
+- Avoid over-constraining with overly specific matchers or cardinalities that cause brittle tests.
+
+---
+
+## Assertion Code Examples
+
+### Basic Equality Check
+
+```cpp
+TEST(FactorialTest, ComputesCorrectFactorials) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+  ASSERT_EQ(Factorial(3), 6) << "Factorial of 3 should be 6.";
+}
+```
+
+### Floating Point Approximate Comparison
+
+```cpp
+TEST(MathTest, FloatingPointNearCheck) {
+  double result = CalculatePiApproximation();
+  EXPECT_NEAR(result, 3.14159, 0.0001);
+}
+```
+
+### Exception Checking
+
+```cpp
+TEST(FileTest, ThrowsOnInvalidFile) {
+  EXPECT_THROW(OpenFile("nonexistent.txt"), std::runtime_error);
+}
+```
+
+### Predicate Usage
+
+```cpp
+bool IsOdd(int n) { return n % 2 == 1; }
+
+TEST(NumTest, ChecksOddness) {
+  EXPECT_PRED1(IsOdd, 3);
+  EXPECT_PRED1(IsOdd, 4);  // This will fail
+}
+```
+
+### Death Assertion
+
+```cpp
+TEST(DeathTest, CrashOnInvalidInput) {
+  EXPECT_DEATH(ProcessInput(nullptr), "Null pointer detected");
+}
+```
+
+---
+
+## Troubleshooting and Common Pitfalls
+
+- **Using `EXPECT_EQ` on C strings compares addresses, not string content.** Use `EXPECT_STREQ` to compare string contents.
+- **Floating point comparisons should not use `EXPECT_EQ`.** Use `EXPECT_NEAR` or `EXPECT_FLOAT_EQ`/`EXPECT_DOUBLE_EQ` instead.
+- **Make sure exceptions are enabled in your build for exception assertions.**
+- **Use `ASSERT_` assertions to guard against null pointers before dereferencing.**
+- **Avoid side effects in assertions — arguments are evaluated once but order is undefined.**
+- **Death assertions may not work properly if test environment or OS limits support.**
+
+---
+
+For a deeper understanding of assertions, including best practices and advanced scenarios, see the [Assertions Best Practices Guide](../guides/core-test-workflows/assertions-best-practices).
 
 ---
 
 ## Related Documentation
 
-- [Matchers Reference](matchers.md): For rich expressive conditions with `EXPECT_THAT` macro.
-- [Mocking Reference](mocking.md): Learn combining assertions with mocks.
-- [Advanced GoogleTest Topics](advanced.md): Covers predicate assertions and failures handling.
-- [GoogleTest Primer](primer.md): For introductory concepts and workflow.
+- [Matchers Reference](../api-reference/matchers-api/builtin-matchers) — Learn more about flexible matching strategies.
+- [Writing and Running Your First Test](../getting-started/configuration-and-first-use/writing-first-test) — For beginner test-writing workflows.
+- [GoogleMock Basics](../getting-started/configuration-and-first-use/using-googlemock-basics) — Using mocks with assertions.
+- [Assertions Best Practices Guide](../guides/core-test-workflows/assertions-best-practices) — How to write effective assertions.
 
----
-
-Mastering assertions is vital for creating robust, maintainable tests with GoogleTest. This guide equips you with concrete tools and essential practices for writing accurate and informative tests that speed your debugging and improve code quality.
